unpackaged/main/default/objects/Contract_SKU__c/Contract_SKU__c.object-meta.xml
<CustomObject>
    <label>Contract SKU</label>
    <nameField>
        <displayFormat>CSKU-{0000000}</displayFormat>
        <label>Contract SKU ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract SKUs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>