unpackaged/main/default/objects/Contract_SKU__c/fields/Add_On_Users__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Users__c</fullName>
    <label>Add-On Users</label>
    <summarizedField>Contract_SKU_Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_SKU_Transaction__c.Quantity_Type__c</field>
        <operation>equals</operation>
        <value>Units</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_SKU_Transaction__c.Contract_SKU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>