unpackaged/main/default/objects/Contract_SKU__c/fields/Annual_Discount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Discount__c</fullName>
    <inlineHelpText>Reflects the annual unit discount in dollars for the main product</inlineHelpText>
    <label>zz Annual Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>