unpackaged/main/default/objects/Contract_SKU__c/fields/Annual_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Total__c</fullName>
    <inlineHelpText>Displays the expected ARR after lifetime discounts are applied.</inlineHelpText>
    <label>Annual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>