unpackaged/main/default/objects/Contract_SKU__c/fields/Associated_Main_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Associated_Main_Product_ID__c</fullName>
    <formula>SKU_Product__r.Associated_Main_Product__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Associated Main Product for the Addon User record based on the SKU Product</inlineHelpText>
    <label>Associated Main Product ID</label>
    <type>Text</type>
</CustomField>