unpackaged/main/default/objects/Contract_SKU__c/fields/Base_Price_Annual_Total__c.field-meta.xml
<CustomField>
    <fullName>Base_Price_Annual_Total__c</fullName>
    <formula>If( 
   ISPICKVAL( SKU_Product__r.Pricing_Type__c ,&quot;Monthly&quot;),
   Base_Unit_Price__c *  User_Count_Rollup__c  * 12,
   Base_Unit_Price__c *  User_Count_Rollup__c
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the annual total by calculating base unit price * user count rollup</inlineHelpText>
    <label>zz Base Price Annual Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>