unpackaged/main/default/objects/Contract_SKU__c/fields/Base_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Base_Unit_Price__c</fullName>
    <inlineHelpText>Displays the base unit price for the item without any discounts at the time of the initial sale</inlineHelpText>
    <label>zz Base Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>