unpackaged/main/default/objects/Contract_SKU__c/fields/Billing_Plan_ID__c.field-meta.xml
<CustomField>
    <fullName>Billing_Plan_ID__c</fullName>
    <description>Internal record ID of billing plan related to SKU Product</description>
    <formula>SKU_Product__r.Billing_Plan__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Plan ID</label>
    <type>Text</type>
</CustomField>