unpackaged/main/default/objects/Contract_SKU__c/fields/Contract_SKU_ID_CI__c.field-meta.xml
<CustomField>
    <fullName>Contract_SKU_ID_CI__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record ID wrapped in CASESAFEID function</inlineHelpText>
    <label>Contract SKU ID (CI)</label>
    <type>Text</type>
</CustomField>