unpackaged/main/default/objects/Contract_SKU__c/fields/Contract_SKU_Tx_Count__c.field-meta.xml
<CustomField>
    <fullName>Contract_SKU_Tx_Count__c</fullName>
    <inlineHelpText>Used to determine how many transaction records are associated to this SKU record; Primarily for troubleshooting purposes.</inlineHelpText>
    <label>Contract SKU Tx Count</label>
    <summaryForeignKey>Contract_SKU_Transaction__c.Contract_SKU__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>