unpackaged/main/default/objects/Contract_SKU__c/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Number</label>
    <referenceTo>Customer_Number__c</referenceTo>
    <relationshipLabel>User License Updates</relationshipLabel>
    <relationshipName>Contract_SKU</relationshipName>
    <type>Lookup</type>
</CustomField>