unpackaged/main/default/objects/Contract_SKU__c/fields/Docketwise_Stripe_Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Docketwise_Stripe_Subscription_ID__c</fullName>
    <description>Used by Sales Ops to validate that a subscription contract was found for this Docketwise transaction.</description>
    <label>Docketwise Stripe Subscription ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>