unpackaged/main/default/objects/Contract_SKU__c/fields/Force_Update__c.field-meta.xml
<CustomField>
    <fullName>Force_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this to initiate update flows on the Contract SKU.  For admin only</inlineHelpText>
    <label>Force Update</label>
    <type>Checkbox</type>
</CustomField>