unpackaged/main/default/objects/Contract_SKU__c/fields/Lifetime_ARR__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_ARR__c</fullName>
    <formula>If( 
   ISPICKVAL( SKU_Product__r.Pricing_Type__c ,&quot;Monthly&quot;),
   User_Count_Rollup__c *  Lifetime_Unit_Price__c * 12,
   User_Count_Rollup__c *  Lifetime_Unit_Price__c 
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Rollup of the license count * lifetime unit price</inlineHelpText>
    <label>zz Lifetime ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>