unpackaged/main/default/objects/Contract_SKU__c/fields/Lifetime_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Unit_Price__c</fullName>
    <inlineHelpText>Displays the lifetime unit price where the lifetime discount is subtracted from the base unit price at the time of the initial sale</inlineHelpText>
    <label>zz Lifetime Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>