unpackaged/main/default/objects/Contract_SKU__c/fields/List_Monthly_Total__c.field-meta.xml
<CustomField>
    <fullName>List_Monthly_Total__c</fullName>
    <label>List Monthly Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>