unpackaged/main/default/objects/Contract_SKU__c/fields/Mapped_to_Charge__c.field-meta.xml
<CustomField>
    <fullName>Mapped_to_Charge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to match Contract SKUs to billing system subscription charges and identify discrepancies</description>
    <inlineHelpText>Used to match Contract SKUs to billing system subscription charges and identify discrepancies</inlineHelpText>
    <label>Mapped to Charge</label>
    <type>Checkbox</type>
</CustomField>