unpackaged/main/default/objects/Contract_SKU__c/fields/MyCase_ID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Displays the MyCase ID for the source record based on the import of data in the spring of 2023</inlineHelpText>
    <label>MyCase ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>