unpackaged/main/default/objects/Contract_SKU__c/fields/Net_Commissioned_ARR__c.field-meta.xml
<CustomField>
    <fullName>Net_Commissioned_ARR__c</fullName>
    <formula>User_Count_Rollup__c *  Unit_Commissioned_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the Unit Commissioned ARR field value from the related opportunity SKU record multiplied by the User Count on this record.</inlineHelpText>
    <label>Net Commissioned ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>