unpackaged/main/default/objects/Contract_SKU__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>zzOpportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Contract SKUs</relationshipLabel>
    <relationshipName>Contract_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>