unpackaged/main/default/objects/Contract_SKU__c/fields/Opportunity_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Case_Safe_ID__c</fullName>
    <formula>IF(
    ISBLANK(Original_Opportunity_SKU__c),
    Opportunity_SKU__r.Opportunity__c,
    Original_Opportunity_SKU__r.Opportunity__c
)</formula>
    <label>Opportunity Case Safe ID</label>
    <type>Text</type>
</CustomField>