unpackaged/main/default/objects/Contract_SKU__c/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <formula>IF(
    ISBLANK(Original_Opportunity_SKU__c),
    Opportunity_SKU__r.Opportunity__r.Name,
    Original_Opportunity_SKU__r.Opportunity__r.Name
)</formula>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>