unpackaged/main/default/objects/Contract_SKU__c/fields/Opportunity_Owner_Case_Safe_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Case_Safe_ID__c</fullName>
    <formula>IF(
    ISBLANK(Original_Opportunity_SKU__c),
    CASESAFEID(Opportunity_SKU__r.Opportunity__r.OwnerId),
    CASESAFEID(Original_Opportunity_SKU__r.Opportunity__r.OwnerId)
)</formula>
    <label>Opportunity Owner Case Safe ID</label>
    <type>Text</type>
</CustomField>