unpackaged/main/default/objects/Contract_SKU__c/fields/Opportunity_Owner_Role__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Role__c</fullName>
    <formula>IF(
    ISBLANK(Original_Opportunity_SKU__c),
    Opportunity_SKU__r.Opportunity__r.Owner_Role__c,
    Original_Opportunity_SKU__r.Opportunity__r.Owner_Role__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the owner role field on the Opportunity related to the Opportunity SKU on this record.</inlineHelpText>
    <label>Opportunity Owner Role</label>
    <type>Text</type>
</CustomField>