unpackaged/main/default/objects/Contract_SKU__c/fields/Opportunity_SKU__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_SKU__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Link to the opportunity SKU record that Initiated the Contract SKU record.</inlineHelpText>
    <label>Opportunity SKU</label>
    <referenceTo>Opportunity_SKU__c</referenceTo>
    <relationshipLabel>Contract SKUs</relationshipLabel>
    <relationshipName>Contract_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>