unpackaged/main/default/objects/Contract_SKU__c/fields/Original_Opportunity_SKU__c.field-meta.xml
<CustomField>
    <fullName>Original_Opportunity_SKU__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Original Opportunity SKU when new contract SKU is created from plan change</description>
    <inlineHelpText>Original Opportunity SKU when new contract SKU is created from plan change</inlineHelpText>
    <label>Original Opportunity SKU</label>
    <referenceTo>Opportunity_SKU__c</referenceTo>
    <relationshipLabel>Contract SKUs (Original Opportunity SKU)</relationshipLabel>
    <relationshipName>Contract_SKUs1</relationshipName>
    <type>Lookup</type>
</CustomField>