unpackaged/main/default/objects/Contract_SKU__c/fields/Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type__c</fullName>
    <formula>TEXT(SKU_Product__r.Pricing_Type__c)</formula>
    <label>Pricing Type</label>
    <type>Text</type>
</CustomField>