unpackaged/main/default/objects/Contract_SKU__c/fields/Product_Environment_Record__c.field-meta.xml
<CustomField>
    <fullName>Product_Environment_Record__c</fullName>
    <formula>Original_Opportunity_SKU__r.Opportunity__r.Product_Environment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Environment Record</label>
    <type>Text</type>
</CustomField>