unpackaged/main/default/objects/Contract_SKU__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>TEXT( SKU_Product__r.Product_Family__c )</formula>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>