unpackaged/main/default/objects/Contract_SKU__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <formula>TEXT( SKU_Product__r.Product_Type__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the Product Type from the associated SKU Product</inlineHelpText>
    <label>Product Type</label>
    <type>Text</type>
</CustomField>