unpackaged/main/default/objects/Contract_SKU__c/fields/Qualifying_Rep_Name__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Name__c</fullName>
    <formula>Opportunity_SKU__r.Opportunity__r.Qualifying_Rep__r.FirstName &amp;&quot; &quot; &amp; Opportunity_SKU__r.Opportunity__r.Qualifying_Rep__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the qualifying rep name from the Opportunity related to the Opportunity SKU on this record.</inlineHelpText>
    <label>Qualifying Rep Name</label>
    <type>Text</type>
</CustomField>