unpackaged/main/default/objects/Contract_SKU__c/fields/Qualifying_Rep_Role__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Rep_Role__c</fullName>
    <formula>IF(
    ISBLANK(Original_Opportunity_SKU__c),
    Opportunity_SKU__r.Opportunity__r.Qualifying_Rep_Role__c,
    Original_Opportunity_SKU__r.Opportunity__r.Qualifying_Rep_Role__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the qualifying rep role field on the Opportunity related to the Opportunity SKU on this record.</inlineHelpText>
    <label>Qualifying Rep Role</label>
    <type>Text</type>
</CustomField>