unpackaged/main/default/objects/Contract_SKU__c/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <summarizedField>Contract_SKU_Transaction__c.Quantity__c</summarizedField>
    <summaryForeignKey>Contract_SKU_Transaction__c.Contract_SKU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>