unpackaged/main/default/objects/Contract_SKU__c/fields/Quantity_Change__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Change__c</fullName>
    <description>Pending quantity change for the Contract SKU</description>
    <formula>IF( AND( NOT(ISBLANK(Subscription_Charge__c)), Subscription_Charge__r.Billing_Subscription__r.Status__c = &#39;Active&#39;) ,

CASE(SKU_Product__r.Product_Type__c,

&quot;Main&quot;, Subscription_Charge__r.Quantity__c - User_Count_Rollup__c, 
Subscription_Charge__r.Quantity__c - Add_On_Users__c ),

0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Pending quantity change for the Contract SKU</inlineHelpText>
    <label>Quantity Change</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>