unpackaged/main/default/objects/Contract_SKU__c/fields/Rep_Discount__c.field-meta.xml
<CustomField>
    <fullName>Rep_Discount__c</fullName>
    <inlineHelpText>Reflects the short term unit discount in dollars for main product</inlineHelpText>
    <label>Rep Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>