unpackaged/main/default/objects/Contract_SKU__c/fields/Resulting_from_Tier_Change__c.field-meta.xml
<CustomField>
    <fullName>Resulting_from_Tier_Change__c</fullName>
    <formula>Opportunity_SKU__r.Is_Tier_Change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indication from the Opportunity SKU whether this SKU resulted form a tier change.</inlineHelpText>
    <label>Resulting from Tier Change</label>
    <type>Checkbox</type>
</CustomField>