unpackaged/main/default/objects/Contract_SKU__c/fields/Revenue_Type__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Type__c</fullName>
    <formula>TEXT(SKU_Product__r.Revenue_Type__c)</formula>
    <label>Revenue Type</label>
    <type>Text</type>
</CustomField>