unpackaged/main/default/objects/Contract_SKU__c/fields/Short_Term_Period__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Period__c</fullName>
    <inlineHelpText>Displays the period that the short-term discount price will apply.</inlineHelpText>
    <label>zz Short-Term Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>