unpackaged/main/default/objects/Contract_SKU__c/fields/Short_Term_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Short_Term_Unit_Price__c</fullName>
    <inlineHelpText>Displays the short-term unit price for the item where the short term discount is deducted from the base unit price at the time of the initial sale</inlineHelpText>
    <label>zz Short-Term Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>