unpackaged/main/default/objects/Contract_SKU__c/fields/SKU_Product__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SKU Product</label>
    <referenceTo>SKU_Product__c</referenceTo>
    <relationshipLabel>Contract SKUs</relationshipLabel>
    <relationshipName>Contract_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>