unpackaged/main/default/objects/Contract_SKU__c/fields/SKU_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product_Id__c</fullName>
    <formula>SKU_Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SKU Product Id</label>
    <type>Text</type>
</CustomField>