unpackaged/main/default/objects/Contract_SKU__c/fields/SKU_Product_Sub_Family__c.field-meta.xml
<CustomField>
    <fullName>SKU_Product_Sub_Family__c</fullName>
    <formula>TEXT( SKU_Product__r.Product_Sub_Family__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the product sub family on the contract SKU&#39;s SKU Product</inlineHelpText>
    <label>SKU Product Sub Family</label>
    <type>Text</type>
</CustomField>