unpackaged/main/default/objects/Contract_SKU__c/fields/Subscription_Charge__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Charge__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup relationship to the subscription charge from the billing system that is related to the Contract SKU if applicable</description>
    <inlineHelpText>Lookup relationship to the subscription charge from the billing system that is related to the Contract SKU if applicable</inlineHelpText>
    <label>Subscription Charge</label>
    <referenceTo>Billing_Subscription_Product_Charge__c</referenceTo>
    <relationshipLabel>Contract SKUs</relationshipLabel>
    <relationshipName>Contract_SKUs</relationshipName>
    <type>Lookup</type>
</CustomField>