unpackaged/main/default/objects/Contract_SKU__c/fields/Subscription_Charge_Status__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Charge_Status__c</fullName>
    <description>Status of Subscription with charges from applicable billing system</description>
    <formula>IF( Subscription_Charge__c = &quot;&quot;, &quot;&quot;, Subscription_Charge__r.Billing_Subscription__r.Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Status of Subscription with charges from applicable billing system</inlineHelpText>
    <label>Subscription Charge Status</label>
    <type>Text</type>
</CustomField>