unpackaged/main/default/objects/Contract_SKU__c/fields/Subscription_Contract__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Contract__c</fullName>
    <label>Subscription Contract</label>
    <referenceTo>Contract__c</referenceTo>
    <relationshipLabel>Contract SKUs</relationshipLabel>
    <relationshipName>Contract_SKUs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>