unpackaged/main/default/objects/Contract_SKU__c/fields/Test__c.field-meta.xml
<CustomField>
    <fullName>Test__c</fullName>
    <description>This is used to test formulas with production data prior to publishing them in other fields.</description>
    <formula>/* Opportunity SKU is used for initial purchases */
/* Original Opportunity SKU is used for plan changes, including upgrades or downgrades */
/* Discounts from the original Opportunity persist through upgrades */

IF(
    ISBLANK(Original_Opportunity_SKU__c),

    /* Use the Opportunity SKU */

    Opportunity_SKU__r.Unit_Commissioned_ARR__c,

    /* Otherwise, calculate the new commissioned ARR via the Original Upgrade SKU */

    /* This pulls the effective discount from the Original Opportunity SKU */

    (Original_Opportunity_SKU__r.Unit_Commissioned_ARR__c / (Original_Opportunity_SKU__r.SKU_Product__r.Price_Base__c * IF(TEXT(Original_Opportunity_SKU__r.SKU_Product__r.Pricing_Type__c) = &#39;Monthly&#39;, 12, 1)))

    /* And multiplies it by the new unit price */

    * SKU_Product__r.Price_Base__c * IF(TEXT(SKU_Product__r.Pricing_Type__c) = &#39;Monthly&#39;, 12, 1)
)</formula>
    <label>Test</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>