unpackaged/main/default/objects/Contract_SKU__c/fields/Test_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Test_Rollup__c</fullName>
    <description>This is a temporarily field used to backfill data by Sales Operations.</description>
    <label>Test Rollup</label>
    <summarizedField>Contract_SKU_Transaction__c.Effective_Date__c</summarizedField>
    <summaryForeignKey>Contract_SKU_Transaction__c.Contract_SKU__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>