unpackaged/main/default/objects/Contract_SKU__c/fields/Tier_Change_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Tier_Change_Indicator__c</fullName>
    <formula>Opportunity_SKU__r.Is_Tier_Change__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Represents whether this product represented a tier change from previously contracted product as indicated from the related opportunity SKU record.</inlineHelpText>
    <label>Tier Change Indicator</label>
    <type>Checkbox</type>
</CustomField>