unpackaged/main/default/objects/Contract_SKU__c/fields/Tier_Status__c.field-meta.xml
<CustomField>
    <fullName>Tier_Status__c</fullName>
    <formula>IF(
   ( User_Count_Rollup__c &gt; 0 &amp;&amp; TEXT( SKU_Product__r.Product_Type__c) = &quot;MAIN&quot;),
   &quot;Active Tier&quot;,
   &quot;&quot;
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays &quot;Active Tier&quot; when the Product Type on the SKU Product is Main and the User Count rollup field is greater than 0</inlineHelpText>
    <label>Tier Status</label>
    <type>Text</type>
</CustomField>