unpackaged/main/default/objects/Contract_SKU__c/fields/Unit_ARR__c.field-meta.xml
<CustomField>
    <fullName>Unit_ARR__c</fullName>
    <formula>Opportunity_SKU__r.Unit_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Reflects the Unit ARR field value from the related opportunity SKU record.</inlineHelpText>
    <label>Unit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>