unpackaged/main/default/objects/Contract_SKU__c/fields/User_Count__c.field-meta.xml
<CustomField>
    <fullName>User_Count__c</fullName>
    <label>User Count (Static)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>