unpackaged/main/default/objects/Contract_SKU__c/fields/User_Count_Rollup__c.field-meta.xml
<CustomField>
    <fullName>User_Count_Rollup__c</fullName>
    <label>User Count</label>
    <summarizedField>Contract_SKU_Transaction__c.Quantity__c</summarizedField>
    <summaryFilterItems>
        <field>Contract_SKU_Transaction__c.Quantity_Type__c</field>
        <operation>equals</operation>
        <value>Users</value>
    </summaryFilterItems>
    <summaryForeignKey>Contract_SKU_Transaction__c.Contract_SKU__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>